src/objects/COVA_Project__c.object
<CustomObject>
    <fields>
        <fullName>COVA_Description__c</fullName>
        <label>COVA_Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COVA_Opportunity__c</fullName>
        <label>COVA_Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>COVA_Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COVA_PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COVA_Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>COVA_Projects</relationshipLabel>
        <relationshipName>COVA_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>COVA_Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COVA_Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>